# backend/docs/swagger.json
@@ -626,6 +626,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/post.ListResponse"
+                        },
+                        "headers": {
+                            "X-Cache": {
+                                "type": "string",
+                                "description": "缓存命中状态：HIT / MISS / BYPASS"
+                            }
                         }
                     },
                     "400": {
@@ -666,6 +672,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/post.DetailResponse"
+                        },
+                        "headers": {
+                            "X-Cache": {
+                                "type": "string",
+                                "description": "缓存命中状态：HIT / MISS / BYPASS"
+                            }
                         }
                     },
                     "400": {
@@ -753,6 +765,9 @@
             "type": "object",
             "properties": {
                 "mysql": {
+                    "type": "string"
+                },
+                "redis": {
                     "type": "string"
                 }
             }
